.provarCaches/00D410000011HE0EAM/objects/rstkf__glfstmplt5__c.object
<CustomObject>
    <description>glfstmplt5__c</description>
    <fields>
        <fullName>rstkf__externalid__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstkf__formula_extid__c</fullName>
        <formula>rstkf__glfstmplt5_glfstmplt4__r.rstkf__externalid__c &amp; &apos;_&apos; &amp; TEXT( rstkf__glfstmplt5_lineseq__c )</formula>
        <label>Formula External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__formula_name__c</fullName>
        <formula>rstkf__glfstmplt5_glfstmplt4__r.Name &amp; &apos;- Seq -&apos; &amp;  TEXT( rstkf__glfstmplt5_lineseq__c )</formula>
        <label>Formula Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__glfstmplt5_command__c</fullName>
        <label>Command to be Executed</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Comment</fullName>
                </value>
                <value>
                    <fullName>Add an Account</fullName>
                    <default>true</default>
                    <label>Add an Account</label>
                </value>
                <value>
                    <fullName>Subtract an Account</fullName>
                </value>
                <value>
                    <fullName>Add an Account Range</fullName>
                </value>
                <value>
                    <fullName>Subtract an Account Range</fullName>
                </value>
                <value>
                    <fullName>Invoke a Predefined Subline Group</fullName>
                </value>
                <value>
                    <fullName>Add Labeled Line</fullName>
                </value>
                <value>
                    <fullName>Multiply by Labeled Line</fullName>
                </value>
                <value>
                    <fullName>Divide by Labeled Line</fullName>
                </value>
                <value>
                    <fullName>Add Imported Data</fullName>
                </value>
                <value>
                    <fullName>Subtract Imported Data</fullName>
                </value>
                <value>
                    <fullName>Multiply by Imported Data</fullName>
                </value>
                <value>
                    <fullName>Divide by Imported Data</fullName>
                </value>
                <value>
                    <fullName>Subtract Labeled Line</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstkf__glfstmplt5_glacct__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Account</label>
        <referenceTo>rstkf__glacct__c</referenceTo>
        <relationshipName>glfstmplt5s</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__glfstmplt5_glcmp__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Company for Accounts</label>
        <referenceTo>rstkf__glcmp__c</referenceTo>
        <relationshipName>glfstmplt5s</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__glfstmplt5_glfstmplt4__c</fullName>
        <label>Financial Statement - Line Header</label>
        <referenceTo>rstkf__glfstmplt4__c</referenceTo>
        <relationshipName>glfstmplt5s</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>rstkf__glfstmplt5_glfstmplt7__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Invoke This Group of Predefined Sublines</label>
        <referenceTo>rstkf__glfstmplt7__c</referenceTo>
        <relationshipName>glfstmplt5s</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__glfstmplt5_lineseq__c</fullName>
        <label>Sequence Within Line</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__glfstmplt5_rangeend__c</fullName>
        <label>End of Account # Range</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__glfstmplt5_rangestart__c</fullName>
        <label>Start of Account # Range</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__glfstmplt5_sourceline__c</fullName>
        <label>Label of Line That is Data Source</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__glfstmplt5_text__c</fullName>
        <label>Comment</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__triggeroptions__c</fullName>
        <label>triggeroptions</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Financial Report Subline</label>
    <listViews>
        <fullName>rstkf__RS_Financial_Statement_Line_Calculation_Det</fullName>
        <columns>NAME</columns>
        <columns>rstkf__glfstmplt5_glfstmplt4__c</columns>
        <columns>rstkf__glfstmplt5_glcmp__c</columns>
        <columns>rstkf__glfstmplt5_rangestart__c</columns>
        <columns>rstkf__glfstmplt5_rangeend__c</columns>
        <columns>rstkf__glfstmplt5_glacct__c</columns>
        <columns>rstkf__glfstmplt5_command__c</columns>
        <columns>rstkf__glfstmplt5_glfstmplt7__c</columns>
        <columns>rstkf__glfstmplt5_sourceline__c</columns>
        <columns>rstkf__glfstmplt5_lineseq__c</columns>
        <columns>rstkf__glfstmplt5_text__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>Financial Statement Line Calculation Det</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>rstkf__RS_Financial_Statement_Subline</fullName>
        <columns>NAME</columns>
        <columns>rstkf__glfstmplt5_glfstmplt4__c</columns>
        <columns>rstkf__glfstmplt5_glcmp__c</columns>
        <columns>rstkf__glfstmplt5_rangestart__c</columns>
        <columns>rstkf__glfstmplt5_rangeend__c</columns>
        <columns>rstkf__glfstmplt5_glacct__c</columns>
        <columns>rstkf__glfstmplt5_command__c</columns>
        <columns>rstkf__glfstmplt5_glfstmplt7__c</columns>
        <columns>rstkf__glfstmplt5_sourceline__c</columns>
        <columns>rstkf__glfstmplt5_lineseq__c</columns>
        <columns>rstkf__glfstmplt5_text__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>Financial Statement Subline</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Financial Report Sublines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>rstkf__companyforaccountsisrequired</fullName>
        <active>true</active>
        <description>Company for Accounts is required.</description>
        <errorConditionFormula>ISBLANK(rstkf__glfstmplt5_glcmp__c)</errorConditionFormula>
        <errorMessage>Company for Accounts is required.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstkf__sequencewithinlineisrequired</fullName>
        <active>true</active>
        <description>Sequence Within Line is required.</description>
        <errorConditionFormula>ISBLANK(rstkf__glfstmplt5_lineseq__c)</errorConditionFormula>
        <errorMessage>Sequence Within Line is required.</errorMessage>
    </validationRules>
</CustomObject>